<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/configure" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/rbNoClose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_no_close"
            />
        <RadioButton
            android:id="@+id/rbCloseOnApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_close_on_app"
            android:checked="true"
            />
        <RadioButton
            android:id="@+id/rbCloseOnGps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_close_on_gps"
            />


    </RadioGroup>

    <Spinner
        android:id="@+id/appList"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </Spinner>

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/add_widget" />

</LinearLayout>